Add staff_pick as optional query param
